--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true romanshe/nextapp-docker npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-2'
+  app: 'docker-nextapp'
+  env: 'Dockernextapp-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-382760887227'
+  bucket_path: 'docker-nextapp'
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  on:
+    branch: master
